--- a/content/posts/2021/流媒体时代如何找到自己想看的电影.md
+++ b/content/posts/2021/流媒体时代如何找到自己想看的电影.md
@@ -8,6 +8,11 @@ categories = ["数字生活"]
 
 +++
 
+<head>
+            <link rel="stylesheet" href="//unpkg.com/heti/umd/heti.min.css">
+</head>
+
+
 **本文仅讨论在国内正规渠道无法看到的影视资源，无特殊说明一般代指美剧，有错误欢迎指出。**
 
 ## 片源哪里来？
