--- a/content/posts/2022/从零开始搭建个人博客（1） - 准备工作.md
+++ b/content/posts/2022/从零开始搭建个人博客（1） - 准备工作.md
@@ -3,10 +3,9 @@ title = "从零开始搭建个人博客（1） - 准备工作"
 date = "2022-01-03T22:10:15+08:00"
 tags = ["Hugo","Github","个人博客"]
 slug = "/hugo-github-pages"
-draft = true
+draft = false
 categories = ["技术"]
 series = ["从零开始搭建个人博客"]
-
 +++
 
 很久以来我的电子笔记都是通过本地化文件来管理的，中间也经历过很多痛苦的过程，Evernote、Notion、Typora以及目前主力使用的Obsidian，但是我发现这些管理方式都有着比较致命的缺点：知识过于碎片化以及过于依赖我的自制力。
