--- a/content/posts/2021/高可用02：高可用系统设计之「架构高可用」.md
+++ b/content/posts/2021/高可用02：高可用系统设计之「架构高可用」.md
@@ -31,7 +31,7 @@ series = ["高可用"]
 
 
 
-![image-20220313160723990](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313160723990.png)
+![image-20220313160723990](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313160723990.png)
 
 **大型系统的分层架构及物理服务器的分布式部署使得位于不同层次的服务器具有不同的可用性特点。关闭服务或服务器宕机时产生的影响也不相同，高可用的解决方案也差异甚大**。大致可以分为：
 
@@ -56,7 +56,7 @@ series = ["高可用"]
 
 - 一旦主机宕机，可以通过人工手段，将其中一个备节点作为主节点。
 
-  ![image-20220313160803044](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313160803044.png)
+  ![image-20220313160803044](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313160803044.png)
 
 **优点**
 
@@ -79,7 +79,7 @@ series = ["高可用"]
 
 **主从模式**其实不是主要解决高可用问题的，更多的是为了实现读写分离，来解决高并发问题。实际场景中通常不是一主一从，而是一主多从架构，因为大部分应用都是的读多写少。主节点处理写请求，从节点处理读请求。由于存在多从，读服务的可用性远高于写服务。另外，写服务会存在单点故障。这个问题可以通过集群动态选主来解决：当主节点不可用时，集群自动选出一台新的主节点。基于zookeeper，动态选主很容易实现。不过动态选主在MySQL集群架构中不会使用，原因是主从同步数据必须在部署时配置好，切换了主节点还是需要运维人工介入修改配置并重启服务。
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313160959711.png" alt="image-20220313160959711" style="zoom: 80%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313160959711.png" alt="image-20220313160959711" style="zoom: 80%;" />
 
 **优缺点分析**
 
@@ -114,11 +114,11 @@ series = ["高可用"]
 
 **双主模式**中，两台服务是平等关系，同时对外提供读写服务，客户端任选一台即可。双主模式是可用性最好的，但是这种架构的一致性处理比较困难，需要两台服务进行双向数据同步。一旦它们之间的通信断开，就形成了网络分区，这种分区会带来[脑裂](https://cloud.tencent.com/developer/article/1027323)（brain-split）问题，并且系统对此无解，必须人工介入。所以在架构设计时极少选择双主模式。
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313161033607.jpg" alt="image-20220313161033607" style="zoom: 25%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313161033607.jpg" alt="image-20220313161033607" style="zoom: 25%;" />
 
 ### （5）数据集群
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313161130766.png" alt="image-20220313161130766" style="zoom:50%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313161130766.png" alt="image-20220313161130766" style="zoom:50%;" />
 
 主备、主从、主主架构本质上都有一个隐含的假设：主机能够存储所有数据，但主机本身的存储和处理能力肯定是有极限的。早在 2013 年，Facebook 就有 2500 亿张上传照片，当时这些照片的容量就已经达到了 250 PB 字节（250 × 1024TB），平均一天上传的图片有 3 亿 5000 万张。如此大量的数据，单台服务器肯定是无法存储和处理的，我们必须使用多台服务器来存储数据，这就是数据集群架构。
 
@@ -180,12 +180,12 @@ series = ["高可用"]
 
 **集中式**：所有数据存在一个总备份中心，设计简单，但是成本较高，需要建设一个独立的备份中心。
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313161156097.png" alt="image-20220313161156097" style="zoom:25%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313161156097.png" alt="image-20220313161156097" style="zoom:25%;" />
 
 **互备式**：每个分区备份另外一个分区的数据，设计复杂，并且扩展麻烦，优点是成本低，因为每台机器都承载两个身份。
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313161206002.png" alt="image-20220313161206002" style="zoom:25%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313161206002.png" alt="image-20220313161206002" style="zoom:25%;" />
 
 **独立式**：每个分区自己有独立的备份中心【非本分区的】，优点是设计简单，各个分区互不影响，但是成本极高。
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313161215359.png" alt="image-20220313161215359" style="zoom:25%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313161215359.png" alt="image-20220313161215359" style="zoom:25%;" />
