--- a/content/posts/2021/高可用03：高可用系统设计之「应用高可用」.md
+++ b/content/posts/2021/高可用03：高可用系统设计之「应用高可用」.md
@@ -61,7 +61,7 @@ series = ["高可用"]
 
 无状态的应用实现高可用架构十分简单，由于服务器不保存请求状态，那么所有服务器完全对等，在任意节点执行同样的请求，结果总是一致的。这种情况下，最简单的高可用方案就是使用负载均衡。
 
-![image-20220313162241918](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313162241918.png)
+![image-20220313162241918](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313162241918.png)
 
 ### （2）分布式Session
 
