--- a/content/posts/2021/高可用04：高可用系统设计之「服务高可用」.md
+++ b/content/posts/2021/高可用04：高可用系统设计之「服务高可用」.md
@@ -29,7 +29,7 @@ series = ["高可用"]
 
 
 
-![image-20220313162619060](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313162619060.png)
+![image-20220313162619060](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313162619060.png)
 
 在上面这个图上，我们可以看到，有三大块的东西——
 
@@ -45,7 +45,7 @@ series = ["高可用"]
 
 **水密舱壁**是中国造船史上的一项重要发明，其原理是用隔舱板将船舱分成若干个互不相通的独立船舱，当船舶发生触礁、碰撞等造成船壳破损时，即使某一船舱破损进水，也不致于波及其它船舱，从而提高船舶的抗沉性。其原理如下图所示：
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/960a304e251f95cad1c8e606975b683e6709c93df465.jpg" alt="960a304e251f95cad1c8e606975b683e6709c93df465" style="zoom: 25%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/960a304e251f95cad1c8e606975b683e6709c93df465.jpg" alt="960a304e251f95cad1c8e606975b683e6709c93df465" style="zoom: 25%;" />
 
 我们的软件设计当然也可能会“漏水”，所以为了不让“故障”蔓延开来，需要使用“隔板”技术，来将架构分隔成多个“船舱”来隔离故障。
 
@@ -53,11 +53,11 @@ series = ["高可用"]
 
 - 按照服务的种类——典型的例子：微服务
 
-  ![image-20220313162919658](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313162919658.png)
+  ![image-20220313162919658](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313162919658.png)
 
 - 按照用户的请求——典型的例子：多租户
 
-  ![image-20220313162929855](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313162929855.png)
+  ![image-20220313162929855](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313162929855.png)
 
 ### （2）异步通讯（Asynchronous）
 
@@ -83,7 +83,7 @@ series = ["高可用"]
 
 所谓 Broker，就是一个中间人，发送方（sender）和接收方（receiver）都互相看不到对方，它们看得到的是一个 Broker，发送方向 Broker 发送消息，接收方向 Broker 订阅消息。如下图所示。
 
-![image-20220313162946453](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313162946453.png)
+![image-20220313162946453](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313162946453.png)
 
 这是完全的解耦。所有的服务都不需要相互依赖，而是依赖于一个中间件 Broker。这个 Broker 是一个像数据总线一样的东西，所有的服务要接收数据和发送数据都发到这个总线上，这个总线就像协议一样，让服务间的通讯变得标准和可控。
 
@@ -97,7 +97,7 @@ series = ["高可用"]
 
 ✨**事件驱动架构（EDA – Event Driven Architecture）**
 
-![image-20220313162956535](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313162956535.png)
+![image-20220313162956535](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313162956535.png)
 
 ### （3）幂等性（Idempotency）
 
@@ -131,7 +131,7 @@ series = ["高可用"]
 - 10bits 作为机器编号（5bits 是数据中心，5bits 的机器 ID），支持 1024 个实例。
 - 12bits 作为毫秒内的序列号。一毫秒可以生成 4096 个序号。
 
-![image-20220313163012791](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313163012791.png)
+![image-20220313163012791](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313163012791.png)
 
 当然，雪花片算法提供的只是一个思想，根据实际的具体情况我们可以适当调整每一部分的比例，比如在接处警的系统中，我们采用了改造过的雪花片算法——保证总长度在53位，并且加上区号的限制，以此来保证全国的接处警系统都能生成唯一的ID。
 
@@ -252,7 +252,7 @@ public interface MyService {
 
 #### 熔断状态机
 
-![image-20220313163041303](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313163041303.png)
+![image-20220313163041303](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313163041303.png)
 
 首先在熔断器内部维护者一个调用失败的计数器，如果调用服务方的接口失败，则使失败次数加 1。
 
@@ -386,7 +386,7 @@ public interface MyService {
 
   为了解决系统后门降级方式的缺点，将降级操作独立到一个单独的系统中，可以实现复杂的权限管理、批量操作等功能。其基本架构如下：
 
-  <img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313163104940.png" alt="image-20220313163104940" style="zoom: 25%;" />
+  <img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313163104940.png" alt="image-20220313163104940" style="zoom: 25%;" />
 
 ### （8）排队
 
@@ -396,7 +396,7 @@ public interface MyService {
 
 下面是 1 号店的“双 11”秒杀排队系统架构：
 
-<img src="https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313163140536.png" alt="image-20220313163140536" style="zoom:25%;" />
+<img src="https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313163140536.png" alt="image-20220313163140536" style="zoom:25%;" />
 
 其基本实现摘录如下：
 
