--- a/content/posts/2021/高可用05：高可用系统设计之「存储高可用」.md
+++ b/content/posts/2021/高可用05：高可用系统设计之「存储高可用」.md
@@ -42,7 +42,7 @@ series = ["高可用"]
 
 #### 失效确认
 
-![image-20220313163458193](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313163458193.png)
+![image-20220313163458193](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313163458193.png)
 
 判断服务器宕机的手段有两种：**心跳检测**和**访问失败报告**。
 
