--- a/content/posts/2021/高可用06：高可用系统设计之「其他辅助手段」.md
+++ b/content/posts/2021/高可用06：高可用系统设计之「其他辅助手段」.md
@@ -68,7 +68,7 @@ series = ["高可用"]
   
   - **可恢复性**：可恢复性指数据丢失后，是否可以通过某种手段进行恢复，如果数据可以恢复，至少说明对业务的影响不会那么大，这样可以相应地降低异地多活架构设计的复杂度。
   
-    ![image-20220313163546122](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313163546122.png)
+    ![image-20220313163546122](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313163546122.png)
 - 数据同步 - 常见的数据同步方案
   - **存储系统同步**：这是最常用也是最简单的同步方式。例如，使用 MySQL 的数据主从数据同步、主主数据同步。缺点是无法定制化，例如，无论需要同步的数据量有多大，MySQL 都只有一个同步通道。因为要保证事务性，一旦数据量比较大，或者网络有延迟，则同步延迟就会比较严重。
   
@@ -76,7 +76,7 @@ series = ["高可用"]
   
   - **重复生成**：数据不同步到异地机房，每个机房都可以生成数据，这个方案适合于可以重复生成的数据。例如，登录产生的 cookie、session 数据、缓存数据等。
   
-    ![image-20220313163605280](https://gitee.com/kiwi4814/pictures/raw/master/img/image-20220313163605280.png)
+    ![image-20220313163605280](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220313163605280.png)
 - 异常处理 - 常见异常处理措施：
   - **多通道同步**：通过多种方式同步数据，例如消息队列+MySQL。
   - **同步和访问结合**：这里的访问指异地机房通过系统的接口来进行数据访问。例如业务部署在异地两个机房 A 和 B，B 机房的业务系统通过接口来访问 A 机房的系统获取账号信息，如下图所示。
