--- a/content/posts/2022/design-patterns/15@设计原则08：迪米特法则（LOD）.md
+++ b/content/posts/2022/design-patterns/15@设计原则08：迪米特法则（LOD）.md
@@ -2,12 +2,15 @@
 title = "设计原则08：迪米特法则（LOD）"
 date = 2022-03-22 22:03:12
 slug = "/law-of-demeter"
-draft = true
+draft = false
 tags = ["阅读笔记","设计模式"]
 categories = ["阅读笔记"]
 series = ["设计模式之美"]
 toc = false
+
 +++
+
+![image-20220327094446581](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/image-20220327094446581.png)
 
 ## 什么是”高内聚、低耦合“？
 
