--- a/content/posts/2022/design-patterns/04@面向对象编程04：贫血模型与充血模型.md
+++ b/content/posts/2022/design-patterns/04@面向对象编程04：贫血模型与充血模型.md
@@ -114,7 +114,7 @@ enableTOC = false
 
 我们在这里只讲解虚拟钱包系统。
 
-![img](https://gitee.com/kiwi4814/pictures/raw/master/img/202203141253373.jpg)
+![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/202203141253373.jpg)
 
 
 
