--- a/content/posts/2021/单元测试01.md
+++ b/content/posts/2021/单元测试01.md
@@ -107,7 +107,7 @@ public class EmployeeRestControllerIntegrationTest {
 
 #### 1. 单元测试代码的位置
 
-单元测试的代码统一放在**`ers-web/src/test`**目录下，并且目录结构与要测试的测试类保持一致。例如对`com.kedacom.ers.police.alarm.controller.AlarmInfoController`进行单元测试时，相应的单元测试类也应该放在test下相应的位置。
+单元测试的代码统一放在**`ers-web/src/test`**目录下，并且目录结构与要测试的测试类保持一致。例如对`com.kiwicom.ers.police.alarm.controller.AlarmInfoController`进行单元测试时，相应的单元测试类也应该放在test下相应的位置。
 
 #### 2. 单元测试类的命名规范
 
