--- a/content/posts/2021/单元测试02.md
+++ b/content/posts/2021/单元测试02.md
@@ -231,7 +231,7 @@ public class TestMapperTest extends BaseMapperConfig {
 @MybatisTest
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 @ActiveProfiles("dev")
-@MapperScan({"com.kedacom.ers.**.mapper"})
+@MapperScan({"com.kiwicom.ers.**.mapper"})
 public class BaseMapperConfig {
 }
 ```
@@ -425,7 +425,7 @@ public class AlarmInfoTestController {
 //@ContextConfiguration(classes = {AlarmInfoTestController.class})
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 @ActiveProfiles("dev")
-@MapperScan({"com.kedacom.ers.**.mapper"})
+@MapperScan({"com.kiwicom.ers.**.mapper"})
 @AutoConfigureMybatis
 public class AlarmInfoControllerTest3 {
 
