--- a/content/posts/2022/design-patterns/23@设计模式之创建型：单例模式.md
+++ b/content/posts/2022/design-patterns/23@设计模式之创建型：单例模式.md
@@ -136,7 +136,7 @@ long id = IdGenerator.getInstance().getId();
 
 ## 二、如何实现一个单例
 
-由于篇幅太长，而且参考了其他很多文章，所以将这部分单独分了出来，详见文章[如何实现一个单例模式？](https://kiwi4814.com/posts/2022/singleton-impl/)。
+由于篇幅太长，而且参考了其他很多文章，所以将这部分单独分了出来，详见文章[如何实现一个单例模式？](https://kiwi4814.github.io/posts/2022/singleton-impl/)。
 
 ## 三、单例存在的问题以及替代方案
 
