--- a/content/posts/2021/高可用04：高可用系统设计之「服务高可用」.md
+++ b/content/posts/2021/高可用04：高可用系统设计之「服务高可用」.md
@@ -14,14 +14,14 @@ series = ["高可用"]
 
 ------
 
-[高可用系列目录](https://kiwi4814.com/series/2021/10/高可用/)
+[高可用系列目录](https://kiwi4814.github.io/series/2021/10/高可用/)
 
-- [高可用01：什么是高可用系统？](https://kiwi4814.com/posts/2021/high-availability-concept/)
-- [高可用02：高可用系统设计之「架构高可用」](https://kiwi4814.com/posts/2021/high-availability-architecture/)
-- [高可用03：高可用系统设计之「应用高可用」](https://kiwi4814.com/posts/2021/high-availability-application/)
-- [<font color="orange">高可用04：高可用系统设计之「服务高可用」</font>](https://kiwi4814.com/posts/2021/high-availability-server/)
-- [高可用05：高可用系统设计之「存储高可用」](https://kiwi4814.com/posts/2021/high-availability-storage/)
-- [高可用06：高可用系统设计之「其他辅助手段」](https://kiwi4814.com/posts/2021/high-availability-aids/)
+- [高可用01：什么是高可用系统？](https://kiwi4814.github.io/posts/2021/high-availability-concept/)
+- [高可用02：高可用系统设计之「架构高可用」](https://kiwi4814.github.io/posts/2021/high-availability-architecture/)
+- [高可用03：高可用系统设计之「应用高可用」](https://kiwi4814.github.io/posts/2021/high-availability-application/)
+- [<font color="orange">高可用04：高可用系统设计之「服务高可用」</font>](https://kiwi4814.github.io/posts/2021/high-availability-server/)
+- [高可用05：高可用系统设计之「存储高可用」](https://kiwi4814.github.io/posts/2021/high-availability-storage/)
+- [高可用06：高可用系统设计之「其他辅助手段」](https://kiwi4814.github.io/posts/2021/high-availability-aids/)
 
 ------
 
