--- a/content/posts/2024/20240305 Docker 折腾指南.md
+++ b/content/posts/2024/20240305 Docker 折腾指南.md
@@ -1,5 +1,5 @@
 ---
-title: 我的Docker最佳实践
+title: Windows Docker 最佳实践分享
 date: 2024-03-29T16:46:31.000
 slug: /docker-best-practices
 draft: false
@@ -11,8 +11,6 @@ series:
   - Docker
 enableTOC: false
 ---
-
-## 我的Docker最佳实践
 
 ### 1. 网络加速
 
