--- a/content/posts/2025/20250209 DeepSeek R1目前稳定使用的方法.md
+++ b/content/posts/2025/20250209 DeepSeek R1目前稳定使用的方法.md
@@ -83,44 +83,44 @@ docker run -d -p 3000:8080 --add-host=host.docker.internal:host-gateway --name o
 
 | DeepSeek 平替网站                                            |                                                              |
 | :----------------------------------------------------------- | ------------------------------------------------------------ |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/menu.svg) **平替网站** | **简介**                                                     |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Flowith](https://flowith.io/blank) | 要登录，中文网站，支持满血版 R1，免费无限制。                |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [秘塔AI](https://metaso.cn/) | 要登录，中文网站，支持满血版 R1，免费无限制，倾向于搜索。    |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Monica](https://monica.im/) | 要登录，中文网站，支持满血版 R1，每天免费 40 次。            |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Lambda](https://lambda.chat/) | 要登录，英文网站，支持满血版 R1，免费无限制。                |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Deep Infra](https://deepinfra.com/chat) | 要登录，英文网站，支持满血版 R1，免费无限制。                |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Openrouter](https://openrouter.ai/chat?models=deepseek/deepseek-r1:free) | 要登录，英文网站，支持满血版 R1，免费无限制。                |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Huggingface](https://huggingface.co/deepseek-ai/DeepSeek-R1) | 要登录，英文网站，支持满血版 R1，免费无限制。                |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Perplexity](https://www.perplexity.ai/) | 要登录，英文网站，支持满血版 R1，倾向于搜索，每天免费 5 次。 |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Groq](https://chat.groq.com/?model=deepseek-r1-distill-llama-70b) | 要登录，英文网站，支持蒸馏版 70B，免费无限制，速度很快。     |
+| **平替网站**                                                 | **简介**                                                     |
+| [Flowith](https://flowith.io/blank)                          | 要登录，中文网站，支持满血版 R1，免费无限制。                |
+| [秘塔AI](https://metaso.cn/)                                 | 要登录，中文网站，支持满血版 R1，免费无限制，倾向于搜索。    |
+| [Monica](https://monica.im/)                                 | 要登录，中文网站，支持满血版 R1，每天免费 40 次。            |
+| [Lambda](https://lambda.chat/)                               | 要登录，英文网站，支持满血版 R1，免费无限制。                |
+| [Deep Infra](https://deepinfra.com/chat)                     | 要登录，英文网站，支持满血版 R1，免费无限制。                |
+| [Openrouter](https://openrouter.ai/chat?models=deepseek/deepseek-r1:free) | 要登录，英文网站，支持满血版 R1，免费无限制。                |
+| [Huggingface](https://huggingface.co/deepseek-ai/DeepSeek-R1) | 要登录，英文网站，支持满血版 R1，免费无限制。                |
+| [Perplexity](https://www.perplexity.ai/)                     | 要登录，英文网站，支持满血版 R1，倾向于搜索，每天免费 5 次。 |
+| [Groq](https://chat.groq.com/?model=deepseek-r1-distill-llama-70b) | 要登录，英文网站，支持蒸馏版 70B，免费无限制，速度很快。     |
 
 
 
 | DeepSeek 客户端                                              |                                           |
 | :----------------------------------------------------------- | ----------------------------------------- |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/menu.svg) **通用客户端** | **简介**                                  |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/pc.svg) [Cherry Studio](https://cherry-ai.com/) | 支持多平台本地客户端。                    |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/pc.svg) [Nextchat](https://nextchat.dev/chat) | 支持多平台本地客户端，支持网页端。        |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/pc.svg) [Chatbox](https://web.chatboxai.app/) | 支持多平台本地客户端，支持网页端。        |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/menu.svg) **编程客户端** | 简介                                      |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/pc.svg) [Cursor](https://www.cursor.com/) | 支持多平台本地客户端。                    |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/pc.svg) [Windsurf](https://codeium.com/) | 支持多平台本地客户端。                    |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/pc.svg) [Continue](https://marketplace.visualstudio.com/items?itemName=Continue.continue) | VS Code 插件，可能是目前最好用的。        |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/pc.svg) [Cline](https://marketplace.visualstudio.com/items?itemName=saoudrizwan.claude-dev) | VS Code 插件，但网上有人说太费 Token 了。 |
+| **通用客户端**                                               | **简介**                                  |
+| [Cherry Studio](https://cherry-ai.com/)                      | 支持多平台本地客户端。                    |
+| [Nextchat](https://nextchat.dev/chat)                        | 支持多平台本地客户端，支持网页端。        |
+| [Chatbox](https://web.chatboxai.app/)                        | 支持多平台本地客户端，支持网页端。        |
+| **编程客户端**                                               | 简介                                      |
+| [Cursor](https://www.cursor.com/)                            | 支持多平台本地客户端。                    |
+| [Windsurf](https://codeium.com/)                             | 支持多平台本地客户端。                    |
+| [Continue](https://marketplace.visualstudio.com/items?itemName=Continue.continue) | VS Code 插件，可能是目前最好用的。        |
+| [Cline](https://marketplace.visualstudio.com/items?itemName=saoudrizwan.claude-dev) | VS Code 插件，但网上有人说太费 Token 了。 |
 
 
 
 | DeepSeek 免费 API                                            |                                                              |
 | :----------------------------------------------------------- | ------------------------------------------------------------ |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/menu.svg) **国内平台** | **简介**                                                     |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [硅基流动](https://cloud.siliconflow.cn/) | 全国产组合，支持满血 R1，注册送 14 元，永久有效。[ [API ](https://cloud.siliconflow.cn/account/ak)] [ [文档](https://docs.siliconflow.cn/api-reference/chat-completions/chat-completions) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [百度千帆](https://console.bce.baidu.com/qianfan/overview) | 支持满血 R1，2 月 18 日前完全免费。[ [API](https://console.bce.baidu.com/iam/#/iam/apikey/list) ] [ [文档](https://cloud.baidu.com/doc/WENXINWORKSHOP/s/Fm2vrveyu) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [火山方舟](https://console.volcengine.com/ark) | 支持满血 R1，注册送 50 万 Tokens，永久有效。[ [API](https://console.volcengine.com/ark/region:ark+cn-beijing/apiKey) ] [ [文档](https://www.volcengine.com/docs/82379/1449737) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [阿里云百炼](https://bailian.console.aliyun.com/) | 支持满血 R1，注册送 1000 万 Tokens，180 天内有效。[ [API](https://bailian.console.aliyun.com/?apiKey=1#/api-key) ] [ [文档](https://bailian.console.aliyun.com/#/model-market/detail/deepseek-r1) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [腾讯云](https://console.cloud.tencent.com/tione/v2/aimarket/detail/deepseek_series) | 支持满血 R1，2 月 25 日前完全免费。[ [API](https://console.cloud.tencent.com/lkeap/api) ] [ [文档](https://cloud.tencent.com/document/product/1772/115963) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/menu.svg) **国外平台** | **简介**                                                     |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Hyperbolic](https://app.hyperbolic.xyz/) | 支持满血 R1，注册送 10 美元。[ [API](https://app.hyperbolic.xyz/settings) ] [ [文档](https://docs.hyperbolic.xyz/docs/getting-started) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Together](https://api.together.ai/playground) | 支持满血 R1，注册送 1 美元。[ [API](https://api.together.ai/settings/api-keys) ] [ [文档](https://api.together.ai/docs) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Fireworks](https://fireworks.ai/) | 支持满血 R1，注册送 1 美元。[ [API](https://fireworks.ai/account/api-keys) ] [ [文档](https://docs.fireworks.ai/getting-started/introduction) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [OpenRouter](https://openrouter.ai/) | 支持满血 R1，注册送 1 美元。[ [API](https://openrouter.ai/settings/keys) ] [ [文档](https://openrouter.ai/docs/quickstart) ] |
-| ![img](https://kiwi4814-1256211473.cos.ap-nanjing.myqcloud.com/img/web.svg) [Groq](https://console.groq.com/) | 支持 70B 蒸馏版，完全免费，但有速率限制。[ [API](https://console.groq.com/keys) ] [ [文档](https://console.groq.com/docs/overview) ] |
+| **国内平台**                                                 | **简介**                                                     |
+| [硅基流动](https://cloud.siliconflow.cn/)                    | 全国产组合，支持满血 R1，注册送 14 元，永久有效。[ [API ](https://cloud.siliconflow.cn/account/ak)] [ [文档](https://docs.siliconflow.cn/api-reference/chat-completions/chat-completions) ] |
+| [百度千帆](https://console.bce.baidu.com/qianfan/overview)   | 支持满血 R1，2 月 18 日前完全免费。[ [API](https://console.bce.baidu.com/iam/#/iam/apikey/list) ] [ [文档](https://cloud.baidu.com/doc/WENXINWORKSHOP/s/Fm2vrveyu) ] |
+| [火山方舟](https://console.volcengine.com/ark)               | 支持满血 R1，注册送 50 万 Tokens，永久有效。[ [API](https://console.volcengine.com/ark/region:ark+cn-beijing/apiKey) ] [ [文档](https://www.volcengine.com/docs/82379/1449737) ] |
+| [阿里云百炼](https://bailian.console.aliyun.com/)            | 支持满血 R1，注册送 1000 万 Tokens，180 天内有效。[ [API](https://bailian.console.aliyun.com/?apiKey=1#/api-key) ] [ [文档](https://bailian.console.aliyun.com/#/model-market/detail/deepseek-r1) ] |
+| [腾讯云](https://console.cloud.tencent.com/tione/v2/aimarket/detail/deepseek_series) | 支持满血 R1，2 月 25 日前完全免费。[ [API](https://console.cloud.tencent.com/lkeap/api) ] [ [文档](https://cloud.tencent.com/document/product/1772/115963) ] |
+| **国外平台**                                                 | **简介**                                                     |
+| [Hyperbolic](https://app.hyperbolic.xyz/)                    | 支持满血 R1，注册送 10 美元。[ [API](https://app.hyperbolic.xyz/settings) ] [ [文档](https://docs.hyperbolic.xyz/docs/getting-started) ] |
+| [Together](https://api.together.ai/playground)               | 支持满血 R1，注册送 1 美元。[ [API](https://api.together.ai/settings/api-keys) ] [ [文档](https://api.together.ai/docs) ] |
+| [Fireworks](https://fireworks.ai/)                           | 支持满血 R1，注册送 1 美元。[ [API](https://fireworks.ai/account/api-keys) ] [ [文档](https://docs.fireworks.ai/getting-started/introduction) ] |
+| [OpenRouter](https://openrouter.ai/)                         | 支持满血 R1，注册送 1 美元。[ [API](https://openrouter.ai/settings/keys) ] [ [文档](https://openrouter.ai/docs/quickstart) ] |
+| [Groq](https://console.groq.com/)                            | 支持 70B 蒸馏版，完全免费，但有速率限制。[ [API](https://console.groq.com/keys) ] [ [文档](https://console.groq.com/docs/overview) ] |
